--- a/src/main/resources/templates/editUser.html
+++ b/src/main/resources/templates/editUser.html
@@ -5,32 +5,49 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Edit User</title>
 </head>
-<body>
-    <h2>Edit User</h2>
+<body style="margin-left: 30px; margin-right: 30px;">
+    <h2 class="text-center" style="margin-top: 20px; margin-bottom: 30px; text-decoration: underline">Edit User</h2>
     <form action="/editUser" method="post" th:object="${userInfo}">
-        <div class="form-group">
-            <label for="id">Id</label>
-            <input type="number" class="form-control" id="id" name="id" th:field="*{id}">
+        <div class="form-group row">
+            <label for="id" class="col-sm-2 col-form-label">Id</label>
+            <div class="col-sm-10">
+                <input type="number" class="form-control-sm" id="id" name="id" th:field="*{id}">
+            </div>
         </div>
-        <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" name="name" th:field="*{name}">
+        <div class="form-group row">
+            <label for="name" class="col-sm-2 col-form-label">Name</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control-sm" id="name" name="name" th:field="*{name}">
+            </div>
         </div>
-        <div class="form-group">
-            <label for="surname">Surname</label>
-            <input type="text" class="form-control" id="surname" name="surname" th:field="*{surname}">
+        <div class="form-group row">
+            <label for="surname" class="col-sm-2 col-form-label">Surname</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control-sm" id="surname" name="surname" th:field="*{surname}">
+            </div>
         </div>
-        <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" class="form-control" id="email" name="email" th:field="*{email}">
+        <div class="form-group row">
+            <label for="email" class="col-sm-2 col-form-label">Email</label>
+            <div class="col-sm-10">
+                <input type="email" class="form-control-sm" id="email" name="email" th:field="*{email}">
+            </div>
         </div>
-        <div class="form-group">
-            <label for="phone">Phone</label>
-            <input type="text" class="form-control" id="phone" name="phone" th:field="*{phone}">
+        <div class="form-group row">
+            <label for="phone"  class="col-sm-2 col-form-label">Phone</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control-sm" id="phone" name="phone" th:field="*{phone}">
+            </div>
         </div>
-        <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="status" th:field="*{active}">
-            <label class="form-check-label" for="status">Active</label>
+        <div class="form-group row">
+            <div class="col-sm-2">Status</div>
+            <div class="col-sm-10">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="status" th:field="*{active}">
+                    <label class="form-check-label" for="status">
+                        Active
+                    </label>
+                </div>
+            </div>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
