--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,15 +6,11 @@
 
     <title>User Management System</title>
 </head>
-<body>
-<div class="container">
-    <h2>
+<body style="margin-left: 30px; margin-right: 30px;">
+    <h2 class="text-center">
         User Management System
     </h2>
-</div>
-
-<div class="container">
-    <div class="dropdown">
+    <div class="dropdown" style="margin-top: 20px; margin-bottom: 5px;">
         <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Order By
         </button>
@@ -27,12 +23,8 @@
             <a class="dropdown-item" href="#">Creation Date (Newest First)</a>
         </div>
     </div>
-</div>
-
-<div class="container" style="width: 70%">
-    <div class="row">
-        <div class="col-md">
-            <table class="table table-striped">
+    <div class="table-responsive">
+            <table class="table table-sm table-striped">
                 <thead class="thead-dark">
                     <tr><th>Id</th>
                         <th>Name</th>
@@ -80,6 +72,7 @@
                 </tr>
                 </tbody>
             </table>
+        </div>
             <nav aria-label="Page navigation example">
                 <ul class="pagination justify-content-center">
                     <li class="page-item disabled">
@@ -93,9 +86,6 @@
                     </li>
                 </ul>
             </nav>
-        </div>
-    </div>
-</div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
