--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,119 +1,142 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>User Management System</title>
-</head>
-<body style="margin-left: 30px; margin-right: 30px;">
-    <h2 class="text-center" style="margin-top: 30px; text-decoration: underline;">
-        User Management System
-    </h2>
+        <title>User Management System</title>
+    </head>
 
-<!--    DROPDOWN ORDER BY-->
-    <div class="dropdown" style="margin-top: 20px; margin-bottom: 5px;">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Order By
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Id</a>
-            <a class="dropdown-item" href="#">Name</a>
-            <a class="dropdown-item" href="#">Surname</a>
-            <a class="dropdown-item" href="#">Status</a>
-            <a class="dropdown-item" href="#">Creation Date (Oldest First)</a>
-            <a class="dropdown-item" href="#">Creation Date (Newest First)</a>
+    <body style="margin-left: 30px; margin-right: 30px;">
+        <h2 class="text-center" style="margin-top: 30px; text-decoration: underline;">
+            User Management System
+        </h2>
+
+    <!--    DROPDOWN ORDER BY-->
+        <div class="dropdown" style="margin-top: 20px; margin-bottom: 5px;">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Order By
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Id</a>
+                <a class="dropdown-item" href="#">Name</a>
+                <a class="dropdown-item" href="#">Surname</a>
+                <a class="dropdown-item" href="#">Status</a>
+                <a class="dropdown-item" href="#">Creation Date (Oldest First)</a>
+                <a class="dropdown-item" href="#">Creation Date (Newest First)</a>
+            </div>
         </div>
-    </div>
 
-<!--    FILTERING -->
-    <form th:action="@{/search}" style="margin-top: 20px; margin-bottom: 5px;">
-        <div class="form-group row">
-            <div class="col-sm-12">
-                <input type="text" name="keyword" id="keyword" size="50" th:value="${keyword}" required />
-<!--                non-breaking space -->
-                &nbsp;
-                <input type="submit" value="Search" />
-                &nbsp;
-                <input type="button" value="Clear" id="btnClear" onclick="clearSearch()" />
+    <!--    FILTERING -->
+        <form th:action="@{/search}" style="margin-top: 20px; margin-bottom: 5px;">
+            <div class="form-group row justify-content-center">
+                <div class="col-sm-12">
+                    <input type="text" name="keyword" id="keyword" size="50" th:value="${keyword}" required />
+    <!--                non-breaking space -->
+                    &nbsp;
+                    <input type="submit" value="Search" />
+                    &nbsp;
+                    <input type="button" value="Clear" id="btnClear" onclick="clearSearch()" />
+                </div>
+
+            </div>
+        </form>
+
+    <!--    TABLE WITH ALL USERS / SEARCH RESULTS -->
+        <div class="table-responsive">
+                <table class="table table-sm table-striped">
+                    <thead class="thead-dark">
+                        <tr><th>Id</th>
+                            <th>Name</th>
+                            <th>Surname</th>
+                            <th>Status</th>
+                            <th>Email</th>
+                            <th>Phone</th>
+                            <th>Creation Date</th>
+                            <th>Delete</th>
+                            <th>Edit</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="user : ${users}">
+                        <td th:text="${user.id}"></td>
+                        <td th:text="${user.name}"></td>
+                        <td th:text="${user.surname}"></td>
+                        <td>
+                            <span th:if="${user.isActive()}">
+                                <a th:href="|/changeStatus/${user.id}|" th:text="${'active'}"></a>
+                            </span>
+                            <span th:unless="${user.isActive()}">
+                                <a th:href="|/changeStatus/${user.id}|" th:text="${'inactive'}"></a>
+                            </span>
+
+                        </td>
+                        <td th:text="${user.email}"></td>
+                        <td th:text="${user.phone}"></td>
+                        <td th:text="${user.createdOn}"></td>
+                        <td>
+                            <a th:href="|/removeUser/${user.id}|" >
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash text-danger" viewBox="0 0 16 16">
+                                    <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                                    <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+                                </svg>
+                            </a>
+                        </td>
+                        <td>
+                            <a th:href="|/user/${user.id}|" >
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil text-success" viewBox="0 0 16 16">
+                                    <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
+                                </svg>
+                            </a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
 
-        </div>
-    </form>
+    <!--    PAGINATION -->
+        <div class="d-flex justify-content-center">
+            <nav aria-label="Page navigation example" class="justify-content-center">
+                <p class="text-center">Total Items [[${totalItems}]] : Page [[${currentPage}]] of [[${totalPages}]]</p>
 
-<!--    TABLE WITH ALL USERS / SEARCH RESULTS -->
-    <div class="table-responsive">
-            <table class="table table-sm table-striped">
-                <thead class="thead-dark">
-                    <tr><th>Id</th>
-                        <th>Name</th>
-                        <th>Surname</th>
-                        <th>Status</th>
-                        <th>Email</th>
-                        <th>Phone</th>
-                        <th>Creation Date</th>
-                        <th>Delete</th>
-                        <th>Edit</th>
-                    </tr>
-                </thead>
-                <tbody>
-                <tr th:each="user : ${users}">
-                    <td th:text="${user.id}"></td>
-                    <td th:text="${user.name}"></td>
-                    <td th:text="${user.surname}"></td>
-                    <td>
-                        <span th:if="${user.isActive()}">
-                            <a th:href="|/changeStatus/${user.id}|" th:text="${'active'}"></a>
-                        </span>
-                        <span th:unless="${user.isActive()}">
-                            <a th:href="|/changeStatus/${user.id}|" th:text="${'inactive'}"></a>
-                        </span>
-
-                    </td>
-                    <td th:text="${user.email}"></td>
-                    <td th:text="${user.phone}"></td>
-                    <td th:text="${user.createdOn}"></td>
-                    <td>
-                        <a th:href="|/removeUser/${user.id}|" >
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash text-danger" viewBox="0 0 16 16">
-                                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
-                                <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
-                            </svg>
-                        </a>
-                    </td>
-                    <td>
-                        <a th:href="|/user/${user.id}|" >
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil text-success" viewBox="0 0 16 16">
-                                <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
-                            </svg>
-                        </a>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-<!--    PAGINATION -->
-            <nav aria-label="Page navigation example">
-                <ul class="pagination justify-content-center">
-                    <li class="page-item disabled">
-                        <a class="page-link" href="#" tabindex="-1">Previous</a>
-                    </li>
-                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <ul class="pagination">
                     <li class="page-item">
-                        <a class="page-link" href="#">Next</a>
+                        <a class="page-link" th:if="${currentPage > 1}" th:href="@{/page/1}">First</a>
+                        <span class="page-link" th:unless="${currentPage > 1}">First</span>
+                    </li>
+
+                    <li class="page-item">
+                        <a class="page-link" th:if="${currentPage > 1}" th:href="@{'/page/' + ${currentPage - 1}}" >Previous</a>
+                        <span class="page-link" th:unless="${currentPage > 1}">Previous</span>
+                    </li>
+
+                    <li class="page-item" th:each="i: ${#numbers.sequence(1, totalPages)}">
+                            <a class="page-link" th:if="${i != currentPage}" th:href="@{'/page/' + ${i}}">[[${i}]]</a>
+                            <span class="page-link" th:unless="${i != currentPage}">[[${i}]]</span>
+                    </li>
+
+                    <li class="page-item">
+                        <a class="page-link" th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${currentPage + 1}}">Next</a>
+                        <span class="page-link" th:unless="${currentPage < totalPages}">Next</span>
+                    </li>
+
+                    <li class="page-item">
+                        <a class="page-link" th:if="${currentPage < totalPages}" th:href="@{'/page/' + ${totalPages}}">Last</a>
+                        <span class="page-link" th:unless="${currentPage < totalPages}">Last</span>
                     </li>
                 </ul>
             </nav>
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        </div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
     <script type="text/javascript">
         function clearSearch() {
             window.location = "[[@{/}]]";
         }
     </script>
 
-</body>
+    </body>
 </html>
