add search by date feature

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,24 +12,9 @@
             User Management System
         </h2>
 
-    <!--    DROPDOWN ORDER BY-->
-        <div class="dropdown" style="margin-top: 20px; margin-bottom: 5px;">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Order By
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">Id</a>
-                <a class="dropdown-item" href="#">Name</a>
-                <a class="dropdown-item" href="#">Surname</a>
-                <a class="dropdown-item" href="#">Status</a>
-                <a class="dropdown-item" href="#">Creation Date (Oldest First)</a>
-                <a class="dropdown-item" href="#">Creation Date (Newest First)</a>
-            </div>
-        </div>
-
     <!--    FILTERING -->
-        <form th:action="@{/search}" style="margin-top: 20px; margin-bottom: 5px;">
-            <div class="form-group row justify-content-center">
+        <form th:action="@{/search}" style="margin-top: 30px; margin-bottom: 5px;">
+            <div class="form-group row">
                 <div class="col-sm-12">
                     <input type="text" name="keyword" id="keyword" size="50" th:value="${keyword}" required />
     <!--                non-breaking space -->
@@ -38,7 +23,21 @@
                     &nbsp;
                     <input type="button" value="Clear" id="btnClear" onclick="clearSearch()" />
                 </div>
+            </div>
+        </form>
 
+        <form th:action="@{/searchByDate}">
+            <div class="input-group" style="margin-bottom: 10px;">
+                <input type="date" class="form-control" name="startDate" placeholder="From"
+                       aria-label="Input group example"
+                       aria-describedby="btnGroupAddon" required>
+                <input type="date" class="form-control" name="endDate" placeholder="To" aria-label="Input group example"
+                       aria-describedby="btnGroupAddon" required>
+                <button type="submit" class="btn btn-outline-secondary" style="margin-left: 10px;">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                    </svg>
+                </button>
             </div>
         </form>
 
