add cancel button to edit user template

--- a/src/main/resources/templates/editUser.html
+++ b/src/main/resources/templates/editUser.html
@@ -49,6 +49,7 @@
                 </div>
             </div>
         </div>
+        <button type="submit" class="btn btn-danger"><a th:href="|/|" th:text="${'Cancel'}" style="color: white; text-decoration: none;"></a></button>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
