--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,11 +16,11 @@
         <form th:action="@{/search}" style="margin-top: 30px; margin-bottom: 5px;">
             <div class="form-group row">
                 <div class="col-sm-12">
-                    <input type="text" name="keyword" id="keyword" size="50" th:value="${keyword}" required class="input-sm"/>
+                    <input type="text" name="keyword" id="keyword" size="50" th:value="${keyword}" required />
                     &nbsp;
                     <input type="submit" value="Search" class="btn btn-outline-primary btn-sm"/>
                     &nbsp;
-                    <input type="button" value="Clear" class="btn btn-outline-primary btn-sm" id="btnClear" onclick="clearSearch()" />
+                    <input type="button" value="Clear" class="btn btn-outline-primary btn-sm" id="btnClear" onclick="clearSearch()"/>
                 </div>
             </div>
         </form>
@@ -128,15 +128,15 @@
             </nav>
         </div>
 
+        <script type="text/javascript">
+            function clearSearch() {
+                window.location = "[[@{/}]]";
+            }
+        </script>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-    <script type="text/javascript">
-        function clearSearch() {
-            window.location = "[[@{/}]]";
-        }
-    </script>
 
     </body>
 </html>
